# ai-resume-analyzer

./: LICENSE  main.py  pyproject.toml
